2009-07-19  Richard Dale  <richard.j.dale@gmail.com>
* Regenerate the C# sources for the KDE 4.3 release
* Add a PlasmaScripting.PopupApplet for writing PopupApplets in C#

2009-01-12  Richard Dale  <richard.j.dale@gmail.com>
* Regenerate the Plasma C# sources from the current headers, and add the new
KDE 4.3 widgets.

2009-01-26  Arno Rehn  <arno@arnorehn.de>
* Make PlasmaScripting.QGraphicsWidget inherit from IQGraphicsItem.

2009-01-12  Richard Dale  <richard.j.dale@gmail.com>
* Add the Plasma.Service and Plasma.ServiceJob classes and regenerated the 
  sources from the current headers

2008-12-01  Richard Dale  <richard.j.dale@gmail.com>
* Changed the tiger applet example to find its tiger.svg resource from within
  the plasmoid package.

2008-12-06  Arno Rehn  <arno@arnorehn.de>
* Don't throw an Exception on compiler warnings
* Set CompilerOptions to an empty string so the nemerle compiler won't crash
* Add tiger-boo and tiger-nemerle examples that are compiled at runtime

2008-12-05  Arno Rehn  <arno@arnorehn.de>
* Add support for compiling sources at runtime. Supported languages for now:
  C#, Boo, Nemerle, VB.NET (this one doesn't quite work yet - the compiler seems
  to be buggy).
  The first non-blank line in the mainscript file needs to be a comment in the form
  // language:csharp references:System.Xml sources:otherfile.cs
  'meta-comments' for different languages look equivalent. By default references for
  qt-dotnet, kde-dotnet and plasma-dll are added. The default language is C#, the
  default source file is only 'main'. So if a script is written in C#, only needs
  qt, kde and plasma bindings and all the code is contained in 'main', this comment
  can be omitted.
  For each source file a md5 hash is created so it's only recompiled if the source
  was modified.

2008-12-01  Richard Dale  <richard.j.dale@gmail.com>
* Added UpdateAllSources() and RemoveSource() slots to the 
  PlasmScripting.DataEngine