@@ -1,3 +1,4 @@
+add_subdirectory( extendertutorial )
 add_subdirectory( tiger )
 add_subdirectory( plasmaclock )
 add_subdirectory( analog-clock )
